# scryfall_python

./: environment.yaml  iron_maiden_songs.csv  main.py  pyproject.toml
